k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: mysterium-ingress
  namespace: mysterium
spec:
  rules:
  - host: mysterium.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mysterium-service
            port: 
              number: 80
  tls:
  - hosts:
    - mysterium.tino.sh
    secretName: mysterium-tino-sh-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

  name: oauth2-proxy-mysterium
  namespace: mysterium
spec:
  rules:
  - host: mysterium.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /oauth2
        backend:
          service:
            name: oauth2-proxy-mysterium
            port: 
              number: 4180
  tls:
  - hosts:
    - mysterium.tino.sh
    secretName: mysterium-tino-sh-tls
